ingress-thomasd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thomasd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: thomasd.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thomasd
                port:
                  number: 8081
